--- a/index.html
+++ b/index.html
@@ -52,16 +52,11 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Chat-Astro: New Mode, New Application, New Technique</h1>
+            <h1 class="title is-1 publication-title">Chat-Astro</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                Chat-Astro: New Mode, New Application, New Technique<sup>*</sup>,</span>
-                <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
+                <strong>New Model, New Application, New Technique!</strong><sup>*</sup>,</span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
