--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Github Repo</span>
                   </a>
                 </span>
                 </a>
