--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <strong>New Model, New Application, New Technique!</strong>,</span>
+                <strong>New Model, New Application, New Technique</strong></span>
                   </div>
 
                   <div class="column has-text-centered">
