--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="publication-links">
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                    <a href="https://github.com/Astro-GPT/AstroGPT" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
